using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public static class StringData 
{
    // Tags
    public static string PlayerTag = "Player";
    public static string EnemyTag = "Enemy";

    // Animations
    public static string Speed = "speed";
    public static string IsSprinting = "isSprinting";
    public static string IsInteracting = "isInteracting";
    public static string AttackSpeed = "attackSpeed";
    public static string BasicAttack = "BasicAttack";

}
